assert-struct/tests/snapshots/equality__equality_pattern.snap
---
source: assert-struct/tests/equality.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/equality_errors/equality_pattern.rs:14:18
   |
14 |         timeout: == expected_timeout,
   |                  ^^^^^^^^^^^^^^^^^^^ expected expected_timeout, got 30
